Updated assembly and tests